--- a/src/pages/price-list/commercial-wine-cooler-repair-cost.astro
+++ b/src/pages/price-list/commercial-wine-cooler-repair-cost.astro
@@ -7,6 +7,7 @@ import Costanchor from "@components/price-list/components_dryer-repair-cost.astr
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/price/style_price.css";
 
@@ -619,6 +620,473 @@ const title ="Commercial  Wine Cooler Repair Cost - Full Pricing Guide";
       </div>
       <Btn />
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+      <div class="page213-content" >
+        <div class="content__page-full-hed">
+          <div class="content__page-hed-h">
+            <h2>Cost to Repair a Wine Cooler Depending on the Brand</h2>
+          </div>
+          <div class="content__page-hed-desc"></div>
+        </div>
+
+        <div class="content__page-full-desc">
+          
+          <div class="content__page-desc">
+            
+            <h3>Whirlpool</h3>
+            <p>Whirlpool is known for its reliable and well-engineered appliances, including wine coolers. The cost to repair a Whirlpool wine cooler can vary depending on the specific issue and required parts. Generally, repair costs range from $150 to $500. Common replacement parts, such as thermostats and door gaskets, are relatively affordable, but more complex components like compressors or control boards can increase the cost. Whirlpool's extensive network of authorized service technicians helps ensure that repairs are done efficiently, often with OEM (Original Equipment Manufacturer) parts, which may be slightly more expensive but ensure quality and compatibility.</p>
+
+            <h3>Sub-Zero</h3>
+            <p>Sub-Zero wine coolers are high-end appliances that come with a premium price tag, and their repair costs reflect this. Repairs for Sub-Zero wine coolers typically range from $200 to $800, depending on the complexity of the issue and the parts needed. Given the brand's reputation for luxury and advanced technology, components like control boards and compressors can be particularly costly. However, Sub-Zero offers excellent customer service and a robust warranty program, which can mitigate some repair expenses, especially if the unit is still under warranty. It's advisable to use authorized Sub-Zero technicians to ensure the integrity of the repair.</p>
+
+            <h3>Frigidaire</h3>
+            <p>Frigidaire offers a range of wine coolers that are generally more affordable than luxury brands, and their repair costs tend to be on the lower end of the spectrum. Typical repair costs for a Frigidaire wine cooler range from $100 to $400. This includes the cost of common replacement parts such as evaporator fans, thermostats, and door gaskets. Frigidaire also provides a wide availability of parts and a network of service providers, making it easier and more cost-effective to get repairs done quickly and efficiently.</p>
+
+            <h3>Danby</h3>
+            <p>Danby is known for producing budget-friendly yet efficient wine coolers. Repair costs for Danby wine coolers usually range from $100 to $350, making them one of the more economical options in terms of maintenance. Parts like shelving, door gaskets, and thermostats are relatively inexpensive. However, more complex repairs involving the compressor or control board can push costs to the higher end of the range. Danby's customer service and availability of parts make it convenient to manage repairs without significant downtime.</p>
+
+            <h3>Viking</h3>
+            <p>Viking is a premium brand that offers high-end wine coolers, and the repair costs are generally higher due to the sophisticated technology and quality of components used. Repair costs for Viking wine coolers typically range from $200 to $700. High-cost components such as compressors and control boards contribute to the higher repair expenses. Viking's commitment to quality and performance often means that using OEM parts and authorized technicians is recommended, which can also add to the overall cost but ensures the longevity and efficiency of the repair.</p>
+
+            <h3>U-Line</h3>
+            <p>U-Line specializes in high-quality, versatile wine coolers, and the cost to repair these units can vary widely. Typical repair costs range from $150 to $600, depending on the issue. U-Line parts, such as door gaskets and thermostats, are moderately priced, but more advanced parts like control boards and compressors can be more expensive. U-Line's strong emphasis on customer support and the availability of authorized service technicians help ensure that repairs are completed accurately, albeit sometimes at a higher cost due to the premium nature of the brand.</p>
+
+            <p>The actual repair cost can vary based on the specific model and the nature of the problem. It's always advisable to get a detailed estimate from a qualified technician and consider the availability of warranties or service contracts that might cover the repair costs.</p>
+
+          </div>
+        </div>
+
+        <div class="content__page-full-logo-brand">
+          <div class="ph-logo-brand">
+            <div class="logo-brand logo-bran-ph-1">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/whirlpool.webp"
+                  alt="Whirlpool"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-2">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/sub-zero.webp"
+                  alt="Sub-Zero"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-3">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/viking.webp"
+                  alt="Viking"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-4">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/thermador.webp"
+                  alt="Thermador"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-5">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/u-line.webp"
+                  alt="U-Line"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-6">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/monogram.webp"
+                  alt="Monogram"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-7">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/jennAir.webp"
+                  alt="Jenn-Air"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-8">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/kitchenAid.webp"
+                  alt="KitchenAid"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-9">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/frigidaire.webp"
+                  alt="Frigidaire"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-10">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/marvel.webp"
+                  alt="Marvel"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-11">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/bosch.webp"
+                  alt="Bosch"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-12">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/haier.webp"
+                  alt="Haier"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-13">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/avanti.webp"
+                  alt="Avanti"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-14">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/danby.webp"
+                  alt="Danby"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-15">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/edgeStar.webp"
+                  alt="EdgeStar"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-16">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/vinotemp.webp"
+                  alt="Vinotempr"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-17">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/euroCave.webp"
+                  alt="EuroCave"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-18">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/perlick.webp"
+                  alt="Perlick"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-19">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/true-residential.webp"
+                  alt="True Residential"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-20">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/summit.webp"
+                  alt="Summit"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-21">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/electrolux.webp"
+                  alt="Electrolux"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-22">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/miele.webp"
+                  alt="Miele"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-23">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/la-sommeliere.webp"
+                  alt="La Sommelière"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-24">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/liebherr.webp"
+                  alt="Liebherr"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+          </div>
+
+          <div class="full-desc-logo-brand">
+            <p>Brands of Wine Cooler we repair</p>
+
+            <div class="desc-logo-brand logo-bran-d-1">
+              <h3><a href="#">Whirlpool</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-2">
+              <h3><a href="#">Sub-Zero</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-3">
+              <h3><a href="#">Viking</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-4">
+              <h3><a href="#">Thermador</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-5">
+              <h3><a href="#">U-Line</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-6">
+              <h3><a href="#">Monogram</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-7">
+              <h3><a href="#">Jenn-Air</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-8">
+              <h3><a href="#">KitchenAid</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-9">
+              <h3><a href="#">Frigidaire</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-10">
+              <h3><a href="#">Marvel</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-11">
+              <h3><a href="#">Bosch</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-12">
+              <h3><a href="#">Haier</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-13">
+              <h3><a href="#">Avanti</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-14">
+              <h3><a href="#">Danby</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-15">
+              <h3><a href="#">EdgeStar</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-16">
+              <h3><a href="#">Vinotemp</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-17">
+              <h3><a href="#">EuroCave</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-18">
+              <h3><a href="#">Perlick</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-19">
+              <h3><a href="#">True Residential</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-20">
+              <h3><a href="#">Summit</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-21">
+              <h3><a href="#">Electrolux</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-22">
+              <h3><a href="#">Miele</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-23">
+              <h3><a href="#">La Sommelière</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-24">
+              <h3><a href="#">Liebherr</a></h3>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+      <Btn />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <div class="maintenance">
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
@@ -870,3 +1338,5 @@ const title ="Commercial  Wine Cooler Repair Cost - Full Pricing Guide";
   </Container>
  
 <Cta />
+<LogoBrands />
+
