--- a/src/pages/price-list/cooktop-repair-cost.astro
+++ b/src/pages/price-list/cooktop-repair-cost.astro
@@ -7,6 +7,7 @@ import Costanchor from "@components/price-list/components_dryer-repair-cost.astr
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/price/style_price.css";
 
@@ -674,6 +675,490 @@ const title ="Cooktop Repair Cost - Labor & Parts Pricing - Ultimate Guide";
     </div>
     <Btn />
 
+
+
+
+
+
+
+
+
+    <div class="page213-content" id="left-menu-6">
+      <div class="content__page-full-hed">
+        <div class="content__page-hed-h">
+          <h2>Cost to Repair a Cooktop Depending on the Brand</h2>
+        </div>
+        <div class="content__page-hed-desc"></div>
+      </div>
+
+      <div class="content__page-full-desc">
+        
+        <div class="content__page-desc">
+          
+          <h3>General Electric (GE)</h3>
+          <p>GE cooktops are known for their reliability and advanced features. However, when it comes to repairs, costs can vary based on the specific model and the nature of the issue. Generally, repair costs for GE cooktops can range from <b>$150 to $400</b>. Common problems include faulty burners, malfunctioning control boards, and damaged glass tops. While minor repairs like burner replacements might be on the lower end of the scale, more complex issues such as electronic control board failures can be more expensive. It's advisable to seek service from GE-certified technicians to ensure quality and to potentially benefit from any existing warranties.</p>
+
+          <h3>Whirlpool</h3>
+          <p>Whirlpool cooktops are popular for their durability and user-friendly designs. Repair costs for Whirlpool cooktops typically fall between <b>$100 and $350</b>. Common issues include broken knobs, faulty ignition systems, and issues with heating elements. Simple fixes like replacing a knob or a heating coil are generally less expensive, while more intricate repairs involving electronic components can be pricier. Whirlpool offers a network of authorized service providers, and utilizing them can not only ensure proper repairs but also help in maintaining any existing warranties.</p>
+
+          <h3>Bosch</h3>
+          <p>Bosch cooktops are celebrated for their sleek design and high performance. However, these high-end appliances often come with a higher repair cost, usually between <b>$200 and $500</b>. Problems can range from malfunctioning touch controls to issues with induction elements or gas valves. Given the advanced technology used in Bosch cooktops, repairs often require specialized knowledge and parts, contributing to the higher cost. Authorized Bosch service centers are recommended for any repairs to ensure that the work meets the brand's high standards and to keep warranties intact.</p>
+
+          <h3>Samsung</h3>
+          <p>Samsung cooktops, known for their innovative features and modern aesthetics, generally have repair costs ranging from <b>$150 to $400</b>. Common issues include defective touch controls, malfunctioning burners, and sensor errors. The cost of repairs depends on the complexity of the problem and the specific model. For instance, fixing a basic gas burner issue might be relatively inexpensive, while troubleshooting an advanced induction cooktop could be more costly. Samsung provides a network of authorized service centers that can ensure quality repairs and help preserve any warranties.</p>
+
+          <h3>KitchenAid</h3>
+          <p>KitchenAid cooktops are favored for their robust build and professional-grade features. Repair costs for KitchenAid cooktops typically range from <b>$150 to $450</b>. Frequent issues include broken heating elements, faulty ignition systems, and control panel malfunctions. While basic repairs such as replacing a heating element might be on the lower end of the cost spectrum, more complex issues involving the control panel or electronic components can be more expensive. To ensure high-quality repairs and maintain any existing warranties, it’s best to use certified KitchenAid technicians.</p>
+
+          <h3>LG</h3>
+          <p>LG cooktops are renowned for their advanced technology and stylish designs. Repair costs for LG cooktops usually range between <b>$150 and $400</b>. Common problems include malfunctioning touch controls, burner issues, and sensor errors. Simpler repairs, like replacing a burner, tend to be less costly, whereas resolving electronic or sensor-related issues can be more expensive. LG has a network of authorized service centers that can provide reliable repairs, ensuring the longevity of the appliance and the validity of any warranties.</p>
+
+          <h3>Frigidaire</h3>
+          <p>Frigidaire cooktops are appreciated for their affordability and dependable performance. Repair costs for Frigidaire cooktops generally range from <b>$100 to $350</b>. Typical issues include broken knobs, faulty heating elements, and ignition problems. Minor repairs, such as replacing a knob or a heating coil, are usually less expensive, while more significant repairs involving electronic components can be on the higher end. To ensure quality and to maintain warranties, it’s advisable to use authorized Frigidaire service technicians for any repairs.</p>
+        </div>
+      </div>
+
+      <div class="content__page-full-logo-brand">
+        <div class="ph-logo-brand">
+          <div class="logo-brand logo-bran-ph-1">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/GE-general-electric.webp"
+                alt="General Electric"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-2">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/whirlpool.webp"
+                alt="Whirlpool"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-3">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/kitchenAid.webp"
+                alt="KitchenAid"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-4">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/samsung.webp"
+                alt="Samsung"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-5">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/lg.webp"
+                alt="LG"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-6">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/bosch.webp"
+                alt="Bosch"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-7">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/frigidaire.webp"
+                alt="Frigidaire"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-8">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/maytag.webp"
+                alt="Maytag"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-9">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/kenmore.webp"
+                alt="Kenmore"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-10">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/jennAir.webp"
+                alt="Jenn-Air"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-11">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/thermador.webp"
+                alt="Thermador"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-12">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/amana.webp"
+                alt="Amana"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-13">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/electrolux.webp"
+                alt="Electrolux"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-14">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/viking.webp"
+                alt="Viking"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-15">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/dacor.webp"
+                alt="Dacor"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-16">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/wolf.webp"
+                alt="Wolf"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-17">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/sub-zero.webp"
+                alt="Sub-Zero"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-18">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/miele.webp"
+                alt="Miele"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-19">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/fisher-paykel.webp"
+                alt="Fisher & Paykel"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-20">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/hotpoint.webp"
+                alt="Hotpoint"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-21">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/haier.webp"
+                alt="Haier"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-22">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/bertazzoni.webp"
+                alt="Bertazzoni"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-23">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/blomberg.webp"
+                alt="Blomberg"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-24">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/monogram.webp"
+                alt="Monogram"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+          <div class="logo-brand logo-bran-ph-25">
+            <a href="#">
+              <img
+                width="300px"
+                height="300px"
+                src="/brand-logos/cafe.webp"
+                alt="Café"
+                loading="lazy"
+              />
+            </a>
+          </div>
+
+
+
+        </div>
+
+        <div class="full-desc-logo-brand">
+          <p>Brands of Cooktop we repair</p>
+
+          <div class="desc-logo-brand logo-bran-d-1">
+            <h3><a href="#">General Electric</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-2">
+            <h3><a href="#">Whirlpool</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-3">
+            <h3><a href="#">KitchenAid</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-4">
+            <h3><a href="#">Samsung</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-5">
+            <h3><a href="#">LG Electronics</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-6">
+            <h3><a href="#">Bosch</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-7">
+            <h3><a href="#">Frigidaire</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-8">
+            <h3><a href="#">Maytag</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-9">
+            <h3><a href="#">Kenmore</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-10">
+            <h3><a href="#">Jenn-Air</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-11">
+            <h3><a href="#">Thermador</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-12">
+            <h3><a href="#">Amana</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-13">
+            <h3><a href="#">Electrolux</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-14">
+            <h3><a href="#">Viking</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-15">
+            <h3><a href="#">Dacor</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-16">
+            <h3><a href="#">Wolf</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-17">
+            <h3><a href="#">Sub-Zero</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-18">
+            <h3><a href="#">Miele</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-19">
+            <h3><a href="#">Fisher & Paykel</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-20">
+            <h3><a href="#">Hotpoint</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-21">
+            <h3><a href="#">Haier</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-22">
+            <h3><a href="#">Bertazzoni</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-23">
+            <h3><a href="#">Blomberg</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-24">
+            <h3><a href="#">Monogram</a></h3>
+          </div>
+
+          <div class="desc-logo-brand logo-bran-d-25">
+            <h3><a href="#">Café</a></h3>
+          </div>
+
+
+        </div>
+      </div>
+
+    </div>
+    <Btn />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="maintenance">
       <div class="head_pricing-policy head_pricing-policy_foto">
         <div class="head_pricing-policy_foto-b">
@@ -1161,3 +1646,4 @@ const title ="Cooktop Repair Cost - Labor & Parts Pricing - Ultimate Guide";
   </Container>
  
 <Cta />
+<LogoBrands />
