--- a/src/pages/price-list/oven-repair-cost.astro
+++ b/src/pages/price-list/oven-repair-cost.astro
@@ -7,6 +7,7 @@ import Costanchor from "@components/price-list/components_dryer-repair-cost.astr
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/price/style_price.css";
 
@@ -769,6 +770,542 @@ const title ="Oven Repair Cost - Labor & Parts - Online Estimates";
       </div>
       <Btn />
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      <div class="page213-content">
+        <div class="content__page-full-hed">
+          <div class="content__page-hed-h">
+            <h2>Cost to Repair an Oven Depending on the Brand</h2>
+          </div>
+          <div class="content__page-hed-desc"></div>
+        </div>
+
+        <div class="content__page-full-desc">
+          <p>
+            The cost to repair an oven can vary significantly depending on the
+            brand, as different manufacturers use different parts and
+            technologies. Here is a general overview of repair costs
+            associated with some popular oven brands:
+          </p>
+
+          <div class="content__page-desc">
+            <h3>Whirlpool Ovens:</h3>
+            <p>
+              When it comes to repairing Whirlpool ovens, several factors can
+              influence the cost, including the nature of the oven issue and
+              the specific model. On average, oven repair services for
+              Whirlpool appliances can range from <b>$150 to $400</b>. Common
+              problems like a malfunctioning oven's circuit breaker or issues
+              with the self-clean cycle are usually on the lower end of the
+              price spectrum, while more complex repairs involving the oven's
+              electronics can be more expensive. Whirlpool ovens are known for
+              their durability, but like any appliance, they require
+              occasional maintenance. The cost can also be affected by whether
+              the oven is a wall oven or a freestanding range. Replacement
+              parts for Whirlpool ovens are generally readily available, which
+              can help reduce wait times for repairs.
+            </p>
+          </div>
+
+          <div class="content__page-desc">
+            <h3>GE Ovens</h3>
+            <p>
+              GE ovens are popular for their high-quality performance, but
+              they can also encounter issues that necessitate professional
+              repair. The average cost to repair a GE oven ranges from <b
+                >$200 to $500</b
+              >. Common problems include a lock-out indicator that stays
+              locked, an oven that takes too long to preheat, or a
+              malfunctioning oven door handle. If the repair involves the
+              oven's circuit breaker or the replacement of other critical
+              components, the price can go higher. Additionally, GE appliances
+              often come with a warranty that may cover some repair costs, so
+              it's always a good idea to check the warranty status before
+              scheduling a repair service.
+            </p>
+          </div>
+
+          <div class="content__page-desc">
+            <h3>Samsung Ovens</h3>
+            <p>
+              Samsung ovens are known for their advanced features, but these
+              can also make repairs more complex and expensive. On average,
+              the cost to repair a Samsung oven ranges from <b>$250 to $550</b
+              >. Issues such as problems with the self-clean cycle, the oven
+              taking too long to reach a safe temperature, or an oven door
+              that won't stay locked are common. Repairs that involve
+              replacing the oven's circuit breaker or significant electronic
+              components can be more costly. Samsung also offers a warranty on
+              their appliances, which can help mitigate some of the repair
+              costs if the oven is still covered.
+            </p>
+          </div>
+
+          <div class="content__page-desc">
+            <h3>LG Ovens</h3>
+            <p>
+              LG ovens are another popular choice for many Home, known for
+              their reliability and modern features. The average cost to
+              repair an LG oven is between <b>$200 and $450</b>. Common issues
+              might include a malfunctioning oven's circuit breaker, aluminum
+              foil or other debris affecting the performance, or problems with
+              the preheating time. LG appliances often come with a warranty,
+              and checking this can help you save on repair costs. If the oven
+              is part of a larger kitchen suite including other appliances
+              like a dishwasher or refrigerator, consider getting a bundled
+              repair service for potential savings.
+            </p>
+          </div>
+
+          <div class="content__page-desc">
+            <h3>Frigidaire Ovens</h3>
+            <p>
+              Frigidaire ovens are well-regarded for their affordability and
+              efficiency, but they can still require occasional repairs. The
+              average cost to repair a Frigidaire oven ranges from <b
+                >$150 to $400</b
+              >. Common issues include problems with the oven's circuit
+              breaker, difficulties in the self-clean cycle, and a door handle
+              that won't move to the unlocked position. If the repair involves
+              more complex components or electronics, the cost can be higher.
+              Frigidaire often offers warranties on their appliances, so it’s
+              beneficial to check if your oven is still covered.
+            </p>
+          </div>
+
+          <div class="content__page-desc">
+            <h3>KitchenAid Ovens</h3>
+            <p>
+              KitchenAid ovens are known for their high-end features and
+              robust build. However, this also means that repairs can be on
+              the pricier side, typically ranging from <b>$250 to $600</b>.
+              Common problems include issues with the oven's circuit breaker,
+              a self-clean cycle that doesn't complete, or an oven door that
+              won't stay locked. These ovens often come with a warranty that
+              can cover some of the repair costs. If multiple appliances in
+              your kitchen are from KitchenAid, it might be worth considering
+              a bundled service to save on repair costs.
+            </p>
+          </div>
+
+          <div class="content__page-desc">
+            <h3>Bosch Ovens</h3>
+            <p>
+              Bosch ovens are renowned for their precision and advanced
+              technology, but this can also make repairs more expensive. The
+              average cost to repair a Bosch oven ranges from <b
+                >$300 to $890</b
+              >. Common issues include a problematic oven's circuit breaker, a
+              self-clean cycle that leaves residue, or an oven that takes too
+              long to preheat. Bosch offers warranties on their appliances,
+              which can offset some of the repair costs. Given the complexity
+              of Bosch ovens, it’s advisable to use authorized repair services
+              to ensure quality repairs.
+            </p>
+          </div>
+
+          <div class="content__page-desc">
+            <h3>Maytag Ovens</h3>
+            <p>
+              Maytag ovens are known for their durability and reliability, but
+              they can still face issues that require professional repair. The
+              average cost to repair a Maytag oven ranges from <b
+                >$200 to $450</b
+              >. Common issues include a malfunctioning oven's circuit
+              breaker, problems with the self-clean cycle, or an oven door
+              handle that won’t move to the unlocked position. Like other
+              brands, Maytag offers warranties on their appliances, so
+              checking the warranty status can help reduce repair costs. If
+              you have other Maytag appliances like a washer or dryer,
+              consider a bundled service for potential savings.
+            </p>
+          </div>
+        </div>
+
+        <div class="content__page-full-logo-brand">
+          <div class="ph-logo-brand">
+            <div class="logo-brand logo-bran-ph-1">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/GE-general-electric.webp"
+                  alt="General Electric"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-2">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/whirlpool.webp"
+                  alt="Whirlpool"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-3">
+              <a href="#">
+                <img
+                  width="230px"
+                  height="300px"
+                  src="/brand-logos/frigidaire.webp"
+                  alt="Frigidaire"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-4">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/samsung.webp"
+                  alt="Samsung"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-5">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/lg.webp"
+                  alt="LG"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-6">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/kitchenAid.webp"
+                  alt="KitchenAid"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-7">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/maytag.webp"
+                  alt="Maytag"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-8">
+              <a href="#">
+                <img
+                  width="290px"
+                  height="300px"
+                  src="/brand-logos/bosch.webp"
+                  alt="Bosch"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-9">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/electrolux.webp"
+                  alt="Electrolux"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-10">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/kenmore.webp"
+                  alt="Kenmore"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-11">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/viking.webp"
+                  alt="Viking"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-12">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/thermador.webp"
+                  alt="Thermador"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-13">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/wolf.webp"
+                  alt="Wolf"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-14">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/monogram.webp"
+                  alt="monogram"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-15">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/miele.webp"
+                  alt="miele"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-16">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/jennAir.webp"
+                  alt="jennAir"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-17">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/bertazzoni.webp"
+                  alt="Bertazzoni"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-18">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/fisher-paykel.webp"
+                  alt="Fisher & Paykel"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-19">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/cafe.webp"
+                  alt="Cafe"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-20">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/zline.webp"
+                  alt="ZLINE"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-21">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/dacor.webp"
+                  alt="Dacor"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="full-desc-logo-brand">
+            <p>Brands of Oven we repair</p>
+
+            <div class="desc-logo-brand logo-bran-d-1">
+              <h3><a href="#">General Electric</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-2">
+              <h3><a href="#">Whirlpool</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-3">
+              <h3><a href="#">Frigidaire</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-4">
+              <h3><a href="#">Samsung</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-5">
+              <h3><a href="#">LG</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-6">
+              <h3><a href="#">KitchenAid</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-7">
+              <h3><a href="#">Maytag</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-8">
+              <h3><a href="#">Bosch</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-9">
+              <h3><a href="#">Electrolux</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-10">
+              <h3><a href="#">Kenmore</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-11">
+              <h3><a href="#">Viking</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-12">
+              <h3><a href="#">Thermador</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-13">
+              <h3><a href="#">wolf</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-14">
+              <h3><a href="#">Monogram</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-15">
+              <h3><a href="#">Miele</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-16">
+              <h3><a href="#">jennAir</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-17">
+              <h3><a href="#">Bertazzoni</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-18">
+              <h3><a href="#">Fisher & Paykel</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-19">
+              <h3><a href="#">Cafe</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-20">
+              <h3><a href="#">ZLINE</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-21">
+              <h3><a href="#">Dacor</a></h3>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <Btn />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <div class="maintenance">
         <div class="head_pricing-policy head_pricing-policy_foto">
           <div class="head_pricing-policy_foto-b">
@@ -1468,3 +2005,4 @@ const title ="Oven Repair Cost - Labor & Parts - Online Estimates";
   </Container>
  
 <Cta />
+<LogoBrands />
